# argocd-plugin-generator-demo

./: .dockerignore  .editorconfig  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.dev.yaml  pyproject.toml
.github/: CODEOWNERS  dependabot.yaml
argocd/: applicationset.yaml
backend/: Dockerfile  database.py  main.py  schemas.py
backend/routers/: assignments.py  dashboard.py  environments.py  organizations.py  projects.py  tenants.py
db/: init.sql
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts  types.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: Dashboard.tsx  Environments.tsx  OrganizationList.tsx  ProjectDashboard.tsx  Projects.tsx  Tenants.tsx
manifests/: applicationset.yaml  plugin-manifests.yaml  postgres-manifests.yaml
plugin/: main.py  models.py  schemas.py
plugin/routers/: plugin.py
