[project]
name = "argocd-plugin-tenant-generator"
version = "0.1.0"
description = "A plugin for Argo CD ApplicationSet Generator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["psycopg2-binary", "fastapi", "uvicorn"]

[dependency-groups]
dev = [
    "prek>=0.3.9",
    "ruff>=0.14.7",
]

[tool.uv]
python-preference = "managed"
required-version = ">=0.5.0"
